--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.2'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "androidx.core:core-ktx:1.2.0"
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'saschpe.android:customtabs:2.0.0'
