--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
