--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,9 @@ dependencies {
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    implementation 'com.ritesh:ratiolayout:1.0.0'
 }
