--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ allprojects {
     }
 }
 
-def acraVersion = '5.3.0'
-def kotlin_version = '1.3.30'
+def acraVersion = '5.5.0'
+def kotlin_version = '1.3.70'
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'tools.fastlane:screengrab:1.0.0'
@@ -75,7 +75,7 @@ dependencies {
     implementation 'saschpe.android:customtabs:2.0.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
-    implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'apache-codec:commons-codec:1.2'
     implementation "ch.acra:acra-mail:$acraVersion"
     implementation "ch.acra:acra-dialog:$acraVersion"
@@ -85,9 +85,9 @@ dependencies {
     implementation 'ru.github.igla:ferriswheel:1.2'
     implementation 'com.github.IamIsPra:Sheriff:1.0.0'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
-    implementation "com.ahmedjazzar.rosetta:rosetta:1.0.1"
+    implementation 'com.ahmedjazzar.rosetta:rosetta:1.01'
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
-    implementation 'com.jakewharton:butterknife:10.1.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
@@ -95,9 +95,10 @@ dependencies {
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.ritesh:ratiolayout:1.0.0'
 
+    //Image Slider (see ColoRushFragment)
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
-    implementation 'com.ritesh:ratiolayout:1.0.0'
 }
