--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ android {
 
 def acraVersion = '5.6.2'
 dependencies {
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'tools.fastlane:screengrab:1.0.0'
@@ -63,7 +63,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -84,7 +84,7 @@ dependencies {
     implementation 'joda-time:joda-time:2.10.6'
 
     implementation 'saschpe.android:customtabs:3.0.2'
-    implementation "com.mikepenz:aboutlibraries:8.3.0"
+    implementation "com.mikepenz:aboutlibraries:8.3.1"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation "ch.acra:acra-mail:$acraVersion"
@@ -108,6 +108,7 @@ dependencies {
     implementation 'com.prof.rssparser:rssparser:2.1.2'
     //noinspection GradleDependency
     implementation 'com.github.ByteHamster:SearchPreference:-SNAPSHOT'
+    implementation 'com.gitlab.asdoi:coronastats:v1.1'
 
     //Timetable
     implementation 'com.github.quwepiro:ColorPickerDialog:a1d628430b'
